# PixelPacker

./: CMakeLists.txt  COPYING  LICENSE  README  licenseApplier.zsh  licenseHeader  precomp.h
cmake/: FindMagick.cmake  PCH_GCC4_v3.cmake
res/: gui.glade
src/: CMakeLists.txt  algoMaxRects.cpp  algoMaxRects.h  main.cpp  myBox.cpp  myBox.h  myVector2.cpp  pixelPak.cpp  pixelPak.h
src/cli/: .pixelCli.cpp.swo  CMakeLists.txt  pixelCli.cpp  pixelCli.h
src/gui/: .pixelGui.cpp.swo  .pixelGui.h.swo  CMakeLists.txt  pixelGui.cpp  pixelGui.h
src/pak/: .CMakeLists.txt.swo  .pixelPak.cpp.swo  CMakeLists.txt  algoGil.cpp  algoGil.h  algoMaxRects.cpp  algoMaxRects.cpp.old  algoMaxRects.h  algoShelfSimple.cpp  algoShelfSimple.h  pixelAlgo.h  pixelPak.cpp  pixelPak.h
src/util/: CMakeLists.txt  message.h  myBox.cpp  myBox.h  myQueue.cpp  myQueue.h  myVector2.cpp  myVector2.h
